[package]
edition = "2021"
name = "aducm410"
version = "0.1.0"
authors = ["RT4BC <bochao.me@gmail.com>", "aducm-rs Contributors"]
build = "build.rs"
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Device support crates for ADUCM410 devices"
repository = "https://github.com/rt4bc/aducm-rs"
readme = "README.md"
keywords = ["aducm", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
rust-version = "1.65"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
defmt = { version = "0.3.5", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['atomics', 'critical-section', 'defmt', 'rt', 'aducm410']
default-target = "thumbv8m.main-none-eabihf"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
aducm410 = []
