[package]
edition = "2021"
rust-version = "1.65"
name = "aducm410-staging"
version = "0.1.0"
authors = ["RT4BC <bochao.me@gmail.com>", "aducm-rs Contributors"]
build = "build.rs"
description = "Device support crates for ADUCM410 devices"
readme = "README.md"
keywords = [
    "aducm", 
    "svd2rust", 
    "no_std", 
    "embedded"
]
categories = [
    "embedded", 
    "no-std"
]
license = "MIT/Apache-2.0"
repository = "https://github.com/rt4bc/aducm410-staging"

[package.metadata.docs.rs]
default-target = "thumbv8m.main-none-eabihf"
features = [
    'atomics', 
    'critical-section', 
    'defmt', 
    'rt', 
    'aducm410'
]
targets = []

[lib]
name = "aducm410_staging"
path = "src/lib.rs"

[dependencies.cortex-m]
version = "0.7.7"

[dependencies.cortex-m-rt]
version = "0.7.3"
optional = true

[dependencies.critical-section]
version = "1.0"
optional = true

[dependencies.defmt]
version = "0.3.5"
optional = true

[dependencies.portable-atomic]
version = "1"
optional = true
default-features = false

[dependencies.vcell]
version = "0.1.3"

[features]
atomics = ["dep:portable-atomic"]
default =[
    "critical-section",
    "rt",
]
rt = ["cortex-m-rt/device"]
aducm410 = []
